updated color scheme

--- a/index.html
+++ b/index.html
@@ -364,9 +364,9 @@
                             <figure class="image"><img src="Images/HangmanImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/Hangman" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
+                            <a href="https://omarjuice.github.io/Hangman" target="_blank" class="card-footer-item button has-text-dark has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/Hangman" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/Hangman" target="_blank" class="card-footer-item button has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -419,9 +419,9 @@
                             <figure class="image"><img src="Images/ExerciseImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/ExerciseTracker" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
+                            <a href="https://omarjuice.github.io/ExerciseTracker" target="_blank" class="card-footer-item button has-text-dark has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/ExerciseTracker" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/ExerciseTracker" target="_blank" class="card-footer-item button has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -460,9 +460,9 @@
                             <figure class="image"><img src="Images/WeatherImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/weather-app" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
+                            <a href="https://omarjuice.github.io/weather-app" target="_blank" class="card-footer-item button has-text-dark has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/weather-app" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/weather-app" target="_blank" class="card-footer-item button has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -494,10 +494,10 @@
                             <figure class="image"><img src="Images/MicroservicesImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://microservices-api.herokuapp.com/" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
+                            <a href="https://microservices-api.herokuapp.com/" target="_blank" class="card-footer-item button has-text-dark has-background-orange orbitron heavy">View
                                 <span class="icon"> <img id="herokuICON" class="" src="Images/herokuICON.png" alt=""
                                         srcset=""></span></i></a>
-                            <a href="https://github.com/OmarJuice/MicroservicesAPI" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/MicroservicesAPI" target="_blank" class="card-footer-item button has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -541,9 +541,9 @@
                             <figure class="image"><img src="Images/WikiPoemsImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/WikiPoems" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
+                            <a href="https://omarjuice.github.io/WikiPoems" target="_blank" class="card-footer-item button has-text-dark has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/WikiPoems" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/WikiPoems" target="_blank" class="card-footer-item button has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -587,9 +587,9 @@
                             <figure class="image"><img src="Images/JSCalcImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/Calculator" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
+                            <a href="https://omarjuice.github.io/Calculator" target="_blank" class="card-footer-item button has-text-dark has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/Calculator" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/Calculator" target="_blank" class="card-footer-item button has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -633,9 +633,9 @@
                             <figure class="image"><img src="Images/DrumImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/DrumMachine" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
+                            <a href="https://omarjuice.github.io/DrumMachine" target="_blank" class="card-footer-item button has-text-dark has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/DrumMachine" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/DrumMachine" target="_blank" class="card-footer-item button has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -680,9 +680,9 @@
                             <figure class="image"><img src="Images/ClockImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/PawmodoroClock" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
+                            <a href="https://omarjuice.github.io/PawmodoroClock" target="_blank" class="card-footer-item button has-text-dark has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/PawmodoroClock" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/PawmodoroClock" target="_blank" class="card-footer-item button has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -726,9 +726,9 @@
                             <figure class="image"><img src="Images/QuoteImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/QuoteMachine" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
+                            <a href="https://omarjuice.github.io/QuoteMachine" target="_blank" class="card-footer-item button has-text-dark has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/QuoteMachine" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/QuoteMachine" target="_blank" class="card-footer-item button has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -773,9 +773,9 @@
                             <figure class="image"><img src="Images/PortfolioImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="#" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
+                            <a href="#" class="card-footer-item button has-text-dark has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/OmarJuice.github.io" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/OmarJuice.github.io" target="_blank" class="card-footer-item button has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -820,9 +820,9 @@
                             <figure class="image"><img src="Images/ColorGameImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/ColorGame" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
+                            <a href="https://omarjuice.github.io/ColorGame" target="_blank" class="card-footer-item button has-text-dark has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/ColorGame" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/ColorGame" target="_blank" class="card-footer-item button has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
@@ -865,9 +865,9 @@
                             <figure class="image"><img class="project-image" src="Images/TicTacToeImage.png" alt=""></figure>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://omarjuice.github.io/TicTacToe" target="_blank" class="card-footer-item button has-text-dark _has-background-orange orbitron heavy">View
+                            <a href="https://omarjuice.github.io/TicTacToe" target="_blank" class="card-footer-item button has-text-dark has-background-orange orbitron heavy">View
                                 <i class="fab fa-github-alt"></i></a>
-                            <a href="https://github.com/OmarJuice/TicTacToe" target="_blank" class="card-footer-item button _has-background-indigo orbitron heavy">Source
+                            <a href="https://github.com/OmarJuice/TicTacToe" target="_blank" class="card-footer-item button has-background-indigo orbitron heavy">Source
                                 Code</a>
 
                         </footer>
