--- a/index.html
+++ b/index.html
@@ -952,7 +952,7 @@
     <footer id="footer" class="footer">
         <div class="container">
             <div class="content has-text-centered">
-                <p id="footer-text" class="saiyan is-size-1 has-text-primary">
+                <p id="footer-text" class="saiyan is-size-1 orange">
                     Thanks for Visting
                 </p>
             </div>
