--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <h1 class="title vanish">Omar Juice</h1>
                 <h1 id="head" class="title is-1">
                     <span>
-                        <a href="#"><img id="dball" src="Images/Oembedded.svg" alt=""></a></span><span id="alias">MAR</span>
+                        <a href="#"><img id="dball" src="Images/CustomDBall.svg" alt=""></a></span><span id="alias">MAR</span>
                     <!-- <span id="myName" class="vanish">MAR</span> -->
                     <span id="alias2" class=""> JUICE</span>
                 </h1>
