--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                         </footer>
                     </div>
                 </div>
-                <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
+                <!-- <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
                         <header class="card-header">
                             <p class="card-header-title aldrich heavy">
@@ -502,7 +502,7 @@
 
                         </footer>
                     </div>
-                </div>
+                </div> -->
                 <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
                         <header class="card-header">
@@ -595,7 +595,7 @@
                         </footer>
                     </div>
                 </div>
-                <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
+                <!-- <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
                         <header class="card-header">
                             <p class="card-header-title is-size-6-mobile aldrich heavy">
@@ -640,9 +640,9 @@
 
                         </footer>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
+                <!-- <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
                         <header class="card-header">
                             <p class="card-header-title is-size-6-mobile aldrich heavy">
@@ -687,9 +687,9 @@
 
                         </footer>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
+                <!-- <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
                         <header class="card-header">
                             <p class="card-header-title is-size-5 aldrich heavy">
@@ -733,7 +733,7 @@
 
                         </footer>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
