slight svg color mod

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Portfolio</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/Ofavicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Ofavicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Ofavicon/favicon-16x16.png">
-    <link rel="manifest" href="Ofavicon/site.webmanifest">
-    <link rel="mask-icon" href="Ofavicon/safari-pinned-tab.svg" color="#d5b15b">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Ofavicon/apple-touch-icon.png?v=476QAER6Xj">
+    <link rel="icon" type="image/png" sizes="32x32" href="Ofavicon/favicon-32x32.png?v=476QAER6Xj">
+    <link rel="icon" type="image/png" sizes="16x16" href="Ofavicon/favicon-16x16.png?v=476QAER6Xj">
+    <link rel="manifest" href="Ofavicon/site.webmanifest?v=476QAER6Xj">
+    <link rel="mask-icon" href="Ofavicon/safari-pinned-tab.svg?v=476QAER6Xj" color="#d5b15b">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/superhero/bulmaswatch.min.css">
