--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     <div class="card">
                         <header class="card-header">
                             <p class="card-header-title aldrich heavy">
-                                Hangman<span class="techList" style="display:none">html5,css3,bulma,javascript,js,ajax,api,react,reactjs,redux,node,express,node.js,mongo,db,mongodb
+                                Hangman<span class="techList" style="display:none">html5,css3,bulma,javascript,js,ajax,api,react,reactjs,redux,node,express,node.js,socket,socket.io,io
                                 </span>
                             </p>
 
