add project, remove search

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             <h2 class="subtitle is-4 aldrich has-text-centered">
                 What I've done
             </h2>
-            <div class="columns is-centered">
+            <!-- <div class="columns is-centered">
                 <div class="column is-half-desktop is-half-tablet is-full-mobile">
                     <div class="columns is-centered is-gapless">
                         <div class="column is-three-fifths">
@@ -316,7 +316,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="columns is-centered">
                 <div class="column is-one-third-desktop is-half-tablet is-full-mobile has-text-centered">
                     <p id="Match" class="vanish orbitron heavy is-large has-text-danger">No Match Found.</p>
@@ -325,12 +325,13 @@
 
 
             <div id="projects" class="columns has-same-height is-centered is-multiline">
+
                 <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
                         <header class="card-header">
                             <p class="card-header-title aldrich heavy">
                                 Algo-viz<span class="techList"
-                                    style="display:none">html5,css3,javascript,js,ajax,api,react,reactjs,express,node.js,websocket,typescript,ts,babel,mobx
+                                    style="display:none">html5,css3,javascript,js,ajax,api,react,reactjs,express,node.js,typescript,ts,babel,mobx
                                 </span>
                             </p>
                             <p class="card-header-icon">
@@ -382,12 +383,70 @@
                         </footer>
                     </div>
                 </div>
+
+                <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
+                    <div class="card">
+                        <header class="card-header">
+                            <p class="card-header-title aldrich heavy">
+                                Foody<span class="techList"
+                                    style="display:none">html5,css3,javascript,js,ajax,api,react,reactjs,express,node.js,socket.io,redux,postgres,sql
+                                </span>
+                            </p>
+                            <p class="card-header-icon">
+                                <span class="icon tooltip">
+                                    <span class="tooltiptext orbitron">React </span>
+                                    <i class="fab fa-react fa-lg"></i>
+                                </span>
+                            </p>
+                            <p class="card-header-icon">
+                                <span class="icon tooltip">
+                                    <span class="tooltiptext orbitron">Redux </span>
+                                    <img src="https://avatars0.githubusercontent.com/u/13142323?s=400&v=4" alt="">
+                                </span>
+                            </p>
+                            <p class="card-header-icon">
+                                <span class="icon tooltip">
+                                    <span class="tooltiptext orbitron">Socket.io </span>
+                                    <img src="https://cdn.worldvectorlogo.com/logos/socket-io.svg" alt="">
+                                </span>
+                            </p>
+                            <p class="card-header-icon">
+                                <span class="icon tooltip">
+                                    <span class="tooltiptext orbitron">Node Express </span>
+                                    <i class="fab fa-node-js fa-lg"></i>
+                                </span>
+                            </p>
+
+                            <p class="card-header-icon">
+                                <span class="icon tooltip">
+                                    <span class="tooltiptext orbitron">Postgres </span>
+                                    <img src="https://user-images.githubusercontent.com/24623425/36042969-f87531d4-0d8a-11e8-9dee-e87ab8c6a9e3.png"
+                                        alt="">
+                                </span>
+                            </p>
+
+                        </header>
+                        <div class="card-image">
+                            <figure class="image"><img
+                                    src="https://camo.githubusercontent.com/a5bdb6909db999218daf4bb73e165d8c48048bee/68747470733a2f2f696d6775722e636f6d2f5555654875626e2e706e67"
+                                    alt=""></figure>
+                        </div>
+                        <footer class="card-footer">
+
+                            <a href="https://github.com/silverkilo/foody" target="_blank"
+                                class="card-footer-item button has-background-indigo orbitron heavy">Source
+                                Code
+                            </a>
+
+                        </footer>
+                    </div>
+                </div>
                 <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
                         <header class="card-header">
                             <p class="card-header-title aldrich heavy">
                                 B-Blog<span class="techList"
-                                    style="display:none">html5,css3,bulma,javascript,js,ajax,api,react,reactjs,next,nextjs,apollo,graphql,node,express,node.js,websocket,animejs
+                                    style="display:none">html5,css3,bulma,javascript,js,ajax,api,react,reactjs,next,nextjs,apollo,graphql,node,express,node.js,websocket,animejs,mysql,sql
                                 </span>
                             </p>
                             <p class="card-header-icon">
@@ -530,7 +589,7 @@
                         </footer>
                     </div>
                 </div>
-
+                <!-- 
                 <div class="projectCard column is-one-third-desktop is-half-tablet is-full-mobile">
                     <div class="card">
                         <header class="card-header">
@@ -726,12 +785,7 @@
                                     <i class="fab fa-css3"></i>
                                 </span>
                             </p>
-                            <!-- <p class="card-header-icon">
-                                <span class="icon tooltip">
-                                        <span class="tooltiptext orbitron">g </span>
-                                    <img class="icon-img" src="https://cdn4.iconfinder.com/data/icons/scripting-and-programming-languages/512/jquery-512.png"
-                                        alt="">
-                                </span> -->
+
                             </p>
                         </header>
                         <div class="card-image">
@@ -748,7 +802,7 @@
 
                         </footer>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </div>
