added deployed link for algo-viz

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <span id="alias2" class=""> </span>
                 </h1>
                 <h2 id="subtitle" class="subtitle aldrich is-4">
-                    A Fullstack Web Developer
+                    A Full Stack Software Engineer
                 </h2>
                 <hr>
             </div>
@@ -331,7 +331,7 @@
                         <header class="card-header">
                             <p class="card-header-title aldrich heavy">
                                 Algo-viz<span class="techList"
-                                    style="display:none">html5,css3,javascript,js,ajax,api,react,reactjs,express,node.js,typescript,ts,babel,mobx
+                                    style="display:none">html5,css3,javascript,js,ajax,api,react,reactjs,express,node.js,typescript,ts,babel,mobx,mongodb,
                                 </span>
                             </p>
                             <p class="card-header-icon">
@@ -375,11 +375,15 @@
                         </div>
                         <footer class="card-footer">
 
+
+                            <a href="https://algo-viz.herokuapp.com" target="_blank"
+                                class="card-footer-item button has-text-dark has-background-orange orbitron heavy">View
+                                <span class="icon"><img src="./Images/herokuICON.png" alt=""></span>
+                            </a>
                             <a href="https://github.com/omarjuice/algo-viz" target="_blank"
                                 class="card-footer-item button has-background-indigo orbitron heavy">Source
                                 Code
                             </a>
-
                         </footer>
                     </div>
                 </div>
@@ -486,9 +490,11 @@
                             <a href="https://bomb-blog.herokuapp.com" target="_blank"
                                 class="card-footer-item button has-text-dark has-background-orange orbitron heavy">View
                                 <span class="icon"><img src="./Images/herokuICON.png" alt=""></span>
-                                <a href="https://github.com/OmarJuice/bomb-blog" target="_blank"
-                                    class="card-footer-item button has-background-indigo orbitron heavy">Source
-                                    Code</a>
+                            </a>
+                            <a href="https://github.com/OmarJuice/bomb-blog" target="_blank"
+                                class="card-footer-item button has-background-indigo orbitron heavy">Source
+                                Code
+                            </a>
 
                         </footer>
                     </div>
